fix: make labels more visible

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -14,7 +14,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: rgba(255, 255, 255, 0.8);
     padding: 20px;
     font-size: 1.5rem;
 
@@ -28,6 +28,7 @@
 
       label {
         font-size: 1.2rem;
+        font-weight: 700;
       }
     }
 
